v2.3 "layout bugs fixed"

--- a/src/components/style/App.css
+++ b/src/components/style/App.css
@@ -32,6 +32,6 @@ section {
 
 @media only screen and (max-width: 1000px) {
     .body {
-        height: 173vh;
+        height: 100%;
     }
 }
