--- a/src/components/style/Header.css
+++ b/src/components/style/Header.css
@@ -41,6 +41,6 @@
     }
     .header-title {
         margin-left: 0px;
-        font-size: 16px;
+        font-size: 14px;
     }
 }
