--- a/src/components/style/Search.css
+++ b/src/components/style/Search.css
@@ -44,9 +44,11 @@ button {
 @media only screen and (max-width: 1000px) {
     .search-area {
         width: 100%;
+        height: 700px;
     }
     .search-area label {
         width: 90%;
+        height: 500px;
     }
     .search-area label h1 {
         font-size: 35px;
